<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/img_no_item"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:contentDescription="@string/empty_cart"
        android:src="@drawable/img_no_internet_satellite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.45" />

    <TextView
        android:id="@+id/text_wh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exclamation"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Display1"
        android:textColor="@color/btnColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_no_item"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/text_no_internet"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_large"
        android:text="@string/error_network"
        android:gravity="center"
        android:textColor="@color/grey_80"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_wh" />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/empty_retry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/PrimaryButton"
        android:text="@string/retry"
        android:layout_marginTop="@dimen/spacing_large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_no_internet"/>

</androidx.constraintlayout.widget.ConstraintLayout>
