<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    android:scrollingCache="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey_10" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/spacing_large"
            android:layout_marginTop="@dimen/spacing_large"
            android:layout_marginRight="@dimen/spacing_large"
            android:text="@string/products"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:textColor="@color/grey_90"
            app:drawableEndCompat="@drawable/ic_shopping_cart"
            app:drawableTint="@color/red_300"
            app:fontFamily="sans-serif-medium" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_middle"
            android:orientation="vertical"
            android:paddingLeft="@dimen/spacing_large"
            android:paddingRight="@dimen/spacing_large">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <include
                    android:id="@+id/cart_empty_view"
                    layout="@layout/empty_cart"
                    android:layout_width="match_parent"
                    android:layout_height="240dp"
                    android:visibility="gone" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/cart_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:clipToPadding="false"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:itemCount="3"
                    tools:listitem="@layout/list_item_cart" />
            </FrameLayout>

            <TextView
                android:id="@+id/cart_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_large"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/grey_90"
                app:fontFamily="sans-serif-medium"
                tools:text="Total Before Discounts: 223.50" />

            <TextView
                android:id="@+id/cart_discounts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_medium"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/grey_90"
                app:fontFamily="sans-serif-medium"
                tools:text="Applied Discounts:" />

            <TextView
                android:id="@+id/cart_total_after_discounts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_medium"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/orange_500"
                app:fontFamily="sans-serif-medium"
                app:layout_constraintStart_toEndOf="@+id/cart_img_product"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Final Total: 200.00" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/spacing_large"
                android:layout_marginTop="@dimen/spacing_large"
                android:layout_marginRight="@dimen/spacing_large"
                android:text="@string/shipping"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:textColor="@color/grey_90"
                app:drawableEndCompat="@drawable/ic_location"
                app:drawableTint="@color/red_300"
                app:fontFamily="sans-serif-medium" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/spacing_large">

                <EditText
                    style="@style/EditText.Flat.Grey.Small"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/spacing_xlarge"
                    android:background="@drawable/edit_text_round_bg_outline"
                    android:hint="@string/name"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName"
                    android:minHeight="@dimen/spacing_xmlarge" />

                <EditText
                    style="@style/EditText.Flat.Grey.Small"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/spacing_xlarge"
                    android:layout_marginTop="@dimen/spacing_middle"
                    android:background="@drawable/edit_text_round_bg_outline"
                    android:hint="@string/phone"
                    android:importantForAutofill="no"
                    android:inputType="phone"
                    android:minHeight="@dimen/spacing_xmlarge" />

                <EditText
                    style="@style/EditText.Flat.Grey.Small"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/spacing_xlarge"
                    android:layout_marginTop="@dimen/spacing_middle"
                    android:background="@drawable/edit_text_round_bg_outline"
                    android:hint="@string/address"
                    android:importantForAutofill="no"
                    android:inputType="textPostalAddress"
                    android:minHeight="@dimen/spacing_xmlarge" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_middle"
                    android:orientation="horizontal">

                    <EditText
                        style="@style/EditText.Flat.Grey.Small"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/spacing_xlarge"
                        android:layout_weight="1"
                        android:background="@drawable/edit_text_round_bg_outline"
                        android:drawableEnd="@drawable/ic_expand_arrow"
                        android:hint="@string/country"
                        android:importantForAutofill="no"
                        android:inputType="text"
                        android:minHeight="@dimen/spacing_xmlarge" />

                    <View
                        android:layout_width="@dimen/spacing_middle"
                        android:layout_height="0dp" />

                    <EditText
                        style="@style/EditText.Flat.Grey.Small"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/spacing_xlarge"
                        android:layout_weight="1"
                        android:background="@drawable/edit_text_round_bg_outline"
                        android:hint="@string/zip"
                        android:importantForAutofill="no"
                        android:inputType="number"
                        android:minHeight="@dimen/spacing_xmlarge" />

                </LinearLayout>

                <EditText
                    style="@style/EditText.Flat.Grey.Small"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/spacing_xlarge"
                    android:layout_marginTop="@dimen/spacing_middle"
                    android:background="@drawable/edit_text_round_bg_outline"
                    android:drawableEnd="@drawable/ic_expand_arrow"
                    android:hint="@string/city"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:minHeight="@dimen/spacing_xmlarge" />

                <EditText
                    style="@style/EditText.Flat.Grey.Small"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/spacing_xlarge"
                    android:layout_marginTop="@dimen/spacing_middle"
                    android:background="@drawable/edit_text_round_bg_outline"
                    android:drawableEnd="@drawable/ic_expand_arrow"
                    android:hint="@string/state"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:minHeight="@dimen/spacing_xmlarge" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/spacing_large"
                android:layout_marginTop="@dimen/spacing_large"
                android:layout_marginRight="@dimen/spacing_large"
                android:text="@string/payment"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:textColor="@color/grey_90"
                app:drawableEndCompat="@drawable/ic_monetization_on"
                app:drawableTint="@color/red_300"
                app:fontFamily="sans-serif-medium" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/spacing_large">

                <EditText
                    style="@style/EditText.Flat.Grey.Small"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/spacing_xlarge"
                    android:background="@drawable/edit_text_round_bg_outline"
                    android:hint="@string/card_type"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:minHeight="@dimen/spacing_xmlarge" />

                <EditText
                    style="@style/EditText.Flat.Grey.Small"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/spacing_xlarge"
                    android:layout_marginTop="@dimen/spacing_middle"
                    android:background="@drawable/edit_text_round_bg_outline"
                    android:drawableEnd="@drawable/ic_person_grey"
                    android:hint="@string/name_on_cart"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName"
                    android:minHeight="@dimen/spacing_xmlarge" />

                <EditText
                    style="@style/EditText.Flat.Grey.Small"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/spacing_xlarge"
                    android:layout_marginTop="@dimen/spacing_middle"
                    android:background="@drawable/edit_text_round_bg_outline"
                    android:drawableEnd="@drawable/ic_credit_card_grey"
                    android:hint="@string/card_number"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:minHeight="@dimen/spacing_xmlarge" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_middle"
                    android:orientation="horizontal">

                    <EditText
                        style="@style/EditText.Flat.Grey.Small"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/spacing_xlarge"
                        android:layout_weight="1"
                        android:background="@drawable/edit_text_round_bg_outline"
                        android:drawableEnd="@drawable/ic_event_grey"
                        android:hint="@string/expire_date"
                        android:importantForAutofill="no"
                        android:inputType="date" />

                    <View
                        android:layout_width="@dimen/spacing_middle"
                        android:layout_height="0dp" />

                    <EditText
                        style="@style/EditText.Flat.Grey.Small"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/spacing_xlarge"
                        android:layout_weight="1"
                        android:background="@drawable/edit_text_round_bg_outline"
                        android:hint="@string/cvv"
                        android:importantForAutofill="no"
                        android:inputType="number" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="@dimen/spacing_large" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/cart_pay"
            style="@style/PrimaryButtonWithDisabledState"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_margin="@dimen/spacing_medium"
            android:enabled="false"
            android:text="@string/pay" />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>
